[tool.poetry]
name = "inferencemax"
version = "0.0.1"
description = ""
authors = ["teilomillet"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
inferencemax = "inferencemax.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pixi.project]
channels = ["conda-forge", "https://conda.modular.com/max"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
inferencemax = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
max = ">=24.5.0,<25"
numpy = ">=1.26.4,<2"
transformers = ">=4.45.2,<5"
pytorch = ">=2.4.1,<3"
onnx = ">=1.17.0,<2"
loguru = ">=0.7.2,<0.8"
fire = ">=0.7.0,<0.8"
